@@ -1,40 +1,115 @@
 package one.microstream.dao.microstream;
 
-import io.micronaut.core.annotation.NonNull;
-import io.micronaut.eclipsestore.RootProvider;
-import jakarta.inject.Inject;
-import jakarta.validation.constraints.NotBlank;
-import one.microstream.dao.microstream.postgres.PostDAOBook;
-import one.microstream.domain.indices.BookIndices;
-import one.microstream.domain.microstream.Book;
-import one.microstream.domain.microstream.Company;
-import org.apache.commons.math3.stat.descriptive.summary.Product;
-import org.eclipse.store.gigamap.jvector.VectorIndex;
-import org.eclipse.store.gigamap.jvector.VectorIndices;
-import org.eclipse.store.gigamap.jvector.VectorSearchResult;
-import org.eclipse.store.gigamap.types.GigaIterator;
-import org.eclipse.store.storage.types.StorageManager;
-
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
-public class DAOBook
+import io.micronaut.eclipsestore.RootProvider;
+import jakarta.inject.Singleton;
+import one.microstream.domain.indices.BookIndices;
+import one.microstream.domain.microstream.Book;
+import org.eclipse.datagrid.cluster.nodelibrary.types.ClusterLockScope;
+import org.eclipse.serializer.concurrency.LockedExecutor;
+import org.eclipse.store.gigamap.jvector.VectorIndex;
+import org.eclipse.store.gigamap.jvector.VectorIndices;
+import org.eclipse.store.gigamap.jvector.VectorSearchResult;
+
+@Singleton
+public class DAOBook extends ClusterLockScope
 {
-	@Inject
-	RootProvider<Company> company;
-	@Inject
-	StorageManager storageManager;
-	@Inject
-	PostDAOBook postDAOBook;
+    private final DataRoot root;
+    private final LuceneIndex<Book> luceneIndex;
 
-    public List<Book> pageBooks(@NonNull @NotBlank int limit)
+    public DAOBook(final LockedExecutor lockedExecutor, final RootProvider<DataRoot> rootProvider)
     {
-        try(Stream<Book> stream = company.root().getGigaBooks().query().stream())
+        super(lockedExecutor);
+        this.root = rootProvider.root();
+        //noinspection unchecked
+        this.luceneIndex = rootProvider.root().getGigaBooks().index().get(LuceneIndex.class);
+    }
+
+    public List<Book> pageBooks(final int limit)
+    {
+        return this.read(() -> this.root.getGigaBooks().query().toList(limit));
+    }
+
+    public List<Book> pageBooks(final int limit, final int offset)
+    {
+        return this.read(() -> this.root.getGigaBooks().query().toList(limit, offset));
+    }
+
+    public Optional<Book> byPostId(final Integer postId)
+    {
+        return this.read(() -> this.root
+            .getGigaBooks()
+            .query(BookIndices.POST_ID.is(postId))
+            .findFirst());
+    }
+
+    public List<Book> findByTitle(final String titleSearch)
+    {
+        final var query = new WildcardQuery(new Term("title", "*%s*".formatted(titleSearch)));
+        return this.read(() -> this.luceneIndex.query(query));
+    }
+
+    public Optional<Book> findByIsbn(final String isbn)
+    {
+        return this.read(() -> this.root
+            .getGigaBooks()
+            .query(BookIndices.ISBN.is(isbn))
+            .findFirst());
+    }
+
+    public List<String> findAllIsbn()
+    {
+        return this.read(() ->
         {
-            return stream.limit(limit).collect(Collectors.toList());
-        }
+            try (final var stream = this.root.getGigaBooks().query().stream())
+            {
+                return stream.map(Book::getIsbn).toList();
+            }
+        });
+    }
+
+    public void insert(final Book book)
+    {
+        this.write(() ->
+        {
+            this.root.getGigaBooks().add(book);
+            this.root.getGigaBooks().store();
+        });
+    }
+
+    public void update(final Book findBook)
+    {
+        this.write(() -> this.byPostId(findBook.getPostId()).ifPresent(book ->
+        {
+            this.root.getGigaBooks().update(
+                book, p ->
+                {
+                    p.setTitle(book.getTitle());
+                    p.setAuthor(book.getAuthor());
+                    p.setGenre(book.getGenre());
+                    p.setIsbn(book.getIsbn());
+                    p.setPages(book.getPages());
+                    p.setPrice(book.getPrice());
+                    p.setDescription(book.getDescription());
+                    p.setDescription(book.getLanguage());
+                    p.setYear(book.getYear());
+                    p.setPublisher(book.getPublisher());
+                }
+            );
+            this.root.getGigaBooks().store();
+        }));
+    }
+
+    public void deleteByPostId(final Integer postId)
+    {
+        this.write(() -> this.byPostId(postId).ifPresent(book ->
+        {
+            this.root.getGigaBooks().remove(book);
+            this.root.getGigaBooks().store();
+        }));
     }
 
     public List<Book> searchBooks(float[] filter, Float score)
@@ -51,56 +126,6 @@ public class DAOBook
         });
 
         return result.stream().filter(e -> e.score() >= score)
-                .map(vsr -> vsr.entity()).collect(Collectors.toUnmodifiableList());
+            .map(vsr -> vsr.entity()).collect(Collectors.toUnmodifiableList());
     }
-
-    public Optional<Book> byPostId(Integer postId)
-    {
-        return company.root().getGigaBooks().query(BookIndices.postgresIdIndex.is(postId)).findFirst();
-    }
-
-	public void insert(final Book book)
-	{
-		this.company.root().getGigaBooks().add(book);
-        this.company.root().getGigaBooks().store();
-	}
-
-	public void update(final Book book)
-	{
-        Optional<Book> optBook = byPostId(book.getPostId());
-
-        if(optBook.isPresent())
-        {
-            Book bookToChange = optBook.get();
-
-            this.company.root().getGigaBooks().update(bookToChange, p ->
-            {
-                p.setTitle(book.getTitle());
-                p.setAuthor(book.getAuthor());
-                p.setGenre(book.getGenre());
-                p.setIsbn(book.getIsbn());
-                p.setPages(book.getPages());
-                p.setPrice(book.getPrice());
-                p.setDescription(book.getDescription());
-                p.setDescription(book.getLanguage());
-                p.setYear(book.getYear());
-                p.setPublisher(book.getPublisher());
-            });
-            this.company.root().getGigaBooks().store();
-        }
-	}
-
-	public void deleteByPostId(final Integer postId)
-	{
-        Optional<Book> optBook = byPostId(postId);
-
-        if(optBook.isPresent())
-        {
-            Book bookToDelete = optBook.get();
-
-            this.company.root().getGigaBooks().remove(bookToDelete);
-            this.company.root().getGigaBooks().store();
-        }
-	}
-
 }
